Updates from ShareLaTeX

--- a/cv.tex
+++ b/cv.tex
@@ -1,13 +1,13 @@
 \documentclass{tccv}
 \usepackage[english]{babel}
 \usepackage{fontawesome}
-
+\usepackage{marvosym}
 
 \begin{document}
 
-\part{Stephen K. Bailey}
+\part{Stephen Bailey}
 
-\section{Data Science and Analysis}
+\section{Data Science and Programming}
 
 \begin{eventlist}
 
@@ -15,59 +15,60 @@
      {Vanderbilt Brain Institute}
      {NIH Predoctoral Research Fellow}  
      
-     \textbf{Used multi-modal MRI to describe how the brain changes during childhood, specializes for language and is refined by reading education.} 
+     \textbf{Pushed lab in novel direction  through use of graph theory to model brain "connectome" throughout the lifespan. Research featured in talks at two major international conferences. \href{https://ww5.aievolution.com/hbm1801/index.cfm?do=ev.viewEv&ev=1362}{\color{blue}\Mundus}} 
      \newline
 
 \begin{factlist}
     \item{$\bullet$}
-         {Utilized diverse analytical methods, including support vector machines, GLM, ICA/PCA, graph theory, and timeseries analysis, to accomplish research aims. }
+         {Won a competitive NIH F31 research fellowship, placing in the 95\textsuperscript{th} percentile. \href{https://projectreporter.nih.gov/project_info_description.cfm?aid=9328269&icde=35806628}{\color{blue}\Mundus}}
          
     \item{$\bullet$}
-         {Authored 8 papers (3 first author) published in peer-reviewed journals,  including  \textit{PNAS} and the  \textit{Journal of Neuroscience}.}     
-    
+         {Leveraged high performance computing cluster to streamline analyses, reducing human wait time from \textgreater 1 week to \textless 1 hour.}
+         
     \item{$\bullet$}
-         {Awarded competitive NIH F31 research fellowship, valued at \$90,000.}
+         {Upgraded lab imaging database of 13,000+ scans by directing its migration to web-based storage platform (XNAT).}
+         
+    \item{$\bullet$}
+         {Utilized diverse analytical methods, including support vector machines, GLM, ICA/PCA, graph theory, and timeseries analysis, throughout projects. }
+         
+    \item{$\bullet$}
+         {Authored 8 papers (3 first author) published in high-impact journals,  including  \textit{PNAS} and the  \textit{Journal of Neuroscience}. \href{https://scholar.google.com/citations?user=s3nPF1MAAAAJ&hl=en}{\color{blue}\Mundus}}     
 
-    \item{$\bullet$}
-         {Worked with lab members and outside developers to manage lab imaging database of 13,000+ scans, and directed migration to web-based storage platform (XNAT).}
-         
-    \item{$\bullet$}
-         {Analyzed large imaging datasets (up to 1 TB) in a high performance computing cluster.}
     
 \end{factlist}
 
+\bigskip
 
 \item{Aug. 2017 -- Dec. 2017}
      {Vanderbilt Center for Tech Transfer}
      {Application Developer}  
      
-    \textbf{Created Python application to scale lab-developed "readability" algorithm to all English words and efficiently analyze a variety of documents.} 
+    \textbf{Developed core application for patent-pending "text readability" algorithm in Python.} 
     \newline
 
 \begin{factlist}
     \item{$\bullet$}
-         {Used SQLite database and pandas to store data for word and scoring metrics.}
-
-    \item{$\bullet$}
-         {Used NLTK (Word2Vec, FreqDict, Stemmers) to apply metric to a variety of documents.}
+         {Used \textit{natural language processing} tools (Word2Vec, FreqDict, Stemmers) to analyze documents.}
          
     \item{$\bullet$}
-         {Collaborated with consultant to implement algorithms into Django application.}
+         {Algorithm and database were wrapped into Django SaaS application, now live.}
 \end{factlist}
+
+\bigskip
 
 \item{May 2017 -- Aug. 2017}
      {Metro Nashville Public Schools}
      {Data Analyst}
 
-    \textbf{Synthesized data from multiple systems (state, local, internal) to create live reports on teaching force retention and hiring trends.} 
+    \textbf{Built interactive reports on teacher vacancies that transformed communication between central office staff and 130+ school leaders.} \href{https://app.powerbi.com/view?r=eyJrIjoiZWVhMmIxMjUtOGM1Yi00MzQ4LWE4M2UtMzVlODA4N2NkNTVmIiwidCI6ImM2ODI4MjU3LTY0MTAtNDA3ZS1iNTU3LWI1ZGM3MjExZGU1NSIsImMiOjN9}{\color{blue}\Mundus}
     \newline
 
 \begin{factlist}
     \item{$\bullet$}
-         {Power BI reports were shared district-wide with 130+ school and administrative leaders.}
+        {Honed communication skills with multiple audiences, including executive leadership.}
          
     \item{$\bullet$}
-         {Collaborated with a variety of stakeholders, from data architects to executive leadership.}
+        {Created data dictionary for clarifying internal discussions about critical terms, such as "retention" and "termination".}
 \end{factlist}
 
 
@@ -80,7 +81,7 @@
 
 \personal
     [stkbailey.github.io]
-    {\textbf{Overview\newline} Researcher with diverse scientific background. Expertise in image processing, statistics, and data visualization. Extensive experience in Python ecosystem. Passionate about collaboration, communication and fostering community.}
+    {\textbf{Overview\newline} I am a rigorous scientist with expertise in image processing and statistics, looking to create value from messy data. \smallskip\newline  Expect me to: Take ownership. Drive towards results. Put team first. Always ask questions. Improve every day.}
     {(615) 925-9322}
     {stkbailey@gmail.com}
 
@@ -94,7 +95,6 @@
 \item[Bachelor of Science \newline Bachelor of Arts]{2007 -- 2011}
      {Chemistry \& Philosophy}
      {Samford University}
-
 \end{yearlist}
 
 
@@ -102,20 +102,20 @@
 
 \begin{yearlist}
 
-\item[Meetup.com]{Ongoing}
-     {Kaggle Working Group}
-     {Organizer of "Data Nerds" group that works on Kaggle competitions. Top performance: 12th \%ile on Data Science Bowl 2018, and a "most impactful kernel" award (19k views).}
-
 \item[Data Science MeetUp]{2018}
-     {"Deconvoluting Convolutions"}
+     {Deconvoluting Convolutions  \href{https://github.com/stkbailey/deconv-conv/blob/master/slides.pdf}{\textcolor{blue}\Mundus}}
      {Tutorial implementing deep convolutional networks for object detection.}
 
 \item[DataCamp.com]{2018}
-     {"Biomedical Image Analysis"}
-     {Designer and instructor for introductory course on using Python (scipy, numpy, matplotlib) for image processing. To be released mid-2018.}
+     {Biomedical Image Analysis}
+     {Designed and taught introductory course on using Python (scipy, numpy, matplotlib) for image processing. To be released Aug. 2018.}
+
+\item[Meetup.com]{2018}
+     {Kaggle Working Group \href{https://www.meetup.com/Data-Nerds/}{\textcolor{blue}\Mundus}}
+     {Organized "Data Nerds" group to work on Kaggle competitions. Top performance: 12th \%ile on Data Science Bowl 2018, and a "most impactful kernel" award (19k views).}
 
 \item[PyNash \& PyTennessee]{2017}
-     {"Principles of Network Analysis"}
+     {Principles of Network Analysis \href{https://github.com/stkbailey/nashnetx/blob/master/slides/PopularPythonistas_v3_PyTN.pdf}{\textcolor{blue}\Mundus}}
      {Tutorial applying graph analysis to scraped data from Meetup.com.}
 
 \end{yearlist}
@@ -127,10 +127,10 @@
 
      
 \item{Advanced}
-     {Python (esp. scipy, pandas, matplotlib, scikit-learn), Matlab, bash, Power BI}
+     {Python (esp. matplotlib, scikit-image, scikit-learn, keras), Power BI, Linux, Matlab, SLURM}
 
 \item{Proficient}
-     {Keras, SQL, NLTK, Office, Docker/Singularity, R, Linux}
+     {Tensorflow, SQL, Docker, R}
 
 \end{factlist}
 
