Updates from ShareLaTeX

--- a/cv.tex
+++ b/cv.tex
@@ -11,36 +11,9 @@
 
 \begin{eventlist}
 
-\item{Aug. 2013 -- Present}
-     {Vanderbilt Brain Institute}
-     {NIH Predoctoral Research Fellow}  
-     
-     \textbf{Pushed lab in novel direction  through use of graph theory to model brain "connectome" throughout the lifespan. Research featured in talks at two major international conferences. \href{https://ww5.aievolution.com/hbm1801/index.cfm?do=ev.viewEv&ev=1362}{\color{blue}\Mundus}} 
-     \newline
 
-\begin{factlist}
-    \item{$\bullet$}
-         {Won a competitive NIH F31 research fellowship, placing in the 95\textsuperscript{th} percentile. \href{https://projectreporter.nih.gov/project_info_description.cfm?aid=9328269&icde=35806628}{\color{blue}\Mundus}}
-         
-    \item{$\bullet$}
-         {Leveraged high performance computing cluster to streamline analyses, reducing human wait time from \textgreater 1 week to \textless 1 hour.}
-         
-    \item{$\bullet$}
-         {Upgraded lab imaging database of 13,000+ scans by directing its migration to web-based storage platform (XNAT).}
-         
-    \item{$\bullet$}
-         {Utilized diverse analytical methods, including support vector machines, GLM, ICA/PCA, graph theory, and timeseries analysis, throughout projects. }
-         
-    \item{$\bullet$}
-         {Authored 8 papers (3 first author) published in high-impact journals,  including  \textit{PNAS} and the  \textit{Journal of Neuroscience}. \href{https://scholar.google.com/citations?user=s3nPF1MAAAAJ&hl=en}{\color{blue}\Mundus}}     
-
-    
-\end{factlist}
-
-\bigskip
-
-\item{Aug. 2017 -- Dec. 2017}
-     {Vanderbilt Center for Tech Transfer}
+\item{2017}
+     {Center for Technology Transfer at Vanderbilt}
      {Application Developer}  
      
     \textbf{Developed core application for patent-pending "text readability" algorithm in Python.} 
@@ -48,15 +21,17 @@
 
 \begin{factlist}
     \item{$\bullet$}
-         {Used \textit{natural language processing} tools (Word2Vec, FreqDict, Stemmers) to analyze documents.}
+         {Applied \textit{natural language processing} tools to decode and tokenize documents.}
          
     \item{$\bullet$}
-         {Algorithm and database were wrapped into Django SaaS application, now live.}
+         {Developed production Django web application to score and analyze documents, now used by lab researchers.}
 \end{factlist}
 
-\bigskip
 
-\item{May 2017 -- Aug. 2017}
+
+\smallskip
+
+\item{2017}
      {Metro Nashville Public Schools}
      {Data Analyst}
 
@@ -66,11 +41,44 @@
 \begin{factlist}
     \item{$\bullet$}
         {Honed communication skills with multiple audiences, including executive leadership.}
-         
-    \item{$\bullet$}
-        {Created data dictionary for clarifying internal discussions about critical terms, such as "retention" and "termination".}
+
 \end{factlist}
 
+\smallskip
+
+\item{2013 -- Present}
+     {Vanderbilt Brain Institute}
+     {NIH Research Fellow}  
+     
+     \textbf{Used graph theory to model the human brain "connectome" and its importance for language.} 
+     \newline
+
+\begin{factlist}
+    \item{$\bullet$}
+         {Leveraged high performance computing cluster to streamline analyses, reducing human wait time from \textgreater 1 week to \textless 1 hour.}
+         
+    \item{$\bullet$}
+         {Upgraded lab imaging database of 13,000+ scans by directing its migration to web-based storage platform (XNAT).}
+         
+    \item{$\bullet$}
+         {Published analyses using machine learning to classify patients by disability based on MRI data. Also published papers with other methods, including GLM, ICA/PCA, graph theory, and time-series analysis.}
+         
+\end{factlist}
+
+
+\smallskip
+
+\item{2018 -- Present}
+     {Nashville Biosciences}
+     {Data Science Intern}
+
+    \textbf{Built standardization pipelines for electronic health records from Vanderbilt's BioVU database.}
+    \newline
+
+\begin{factlist}
+    \item{$\bullet$}
+        {Mapped pharamaceutical data to NIH RxNorm database to allow matching across hundreds of different encoding schemes.}
+\end{factlist}
 
 
 \end{eventlist}
@@ -81,7 +89,7 @@
 
 \personal
     [stkbailey.github.io]
-    {\textbf{Overview\newline} I am a rigorous scientist with expertise in image processing and statistics, looking to create value from messy data. \smallskip\newline  Expect me to: Take ownership. Drive towards results. Put team first. Always ask questions. Improve every day.}
+    {\textbf{Overview\newline} I am a rigorous scientist with expertise in image processing and statistics, with a process-driven, engineering mindset. \smallskip\newline  Expect me to: Take ownership. Drive towards results. Put team first. Always ask questions. Improve every day.}
     {(615) 925-9322}
     {stkbailey@gmail.com}
 
@@ -98,43 +106,43 @@
 \end{yearlist}
 
 
-\section{Projects and Presentations}
-
-\begin{yearlist}
-
-\item[Data Science MeetUp]{2018}
-     {Deconvoluting Convolutions  \href{https://github.com/stkbailey/deconv-conv/blob/master/slides.pdf}{\textcolor{blue}\Mundus}}
-     {Tutorial implementing deep convolutional networks for object detection.}
-
-\item[DataCamp.com]{2018}
-     {Biomedical Image Analysis}
-     {Designed and taught introductory course on using Python (scipy, numpy, matplotlib) for image processing. To be released Aug. 2018.}
-
-\item[Meetup.com]{2018}
-     {Kaggle Working Group \href{https://www.meetup.com/Data-Nerds/}{\textcolor{blue}\Mundus}}
-     {Organized "Data Nerds" group to work on Kaggle competitions. Top performance: 12th \%ile on Data Science Bowl 2018, and a "most impactful kernel" award (19k views).}
-
-\item[PyNash \& PyTennessee]{2017}
-     {Principles of Network Analysis \href{https://github.com/stkbailey/nashnetx/blob/master/slides/PopularPythonistas_v3_PyTN.pdf}{\textcolor{blue}\Mundus}}
-     {Tutorial applying graph analysis to scraped data from Meetup.com.}
-
-\end{yearlist}
-
-
-\section{Software Expertise}
+\section{Technical Skills}
 
 \begin{factlist}
 
-     
-\item{Advanced}
-     {Python (esp. matplotlib, scikit-image, scikit-learn, keras), Power BI, Linux, Matlab, SLURM}
-
-\item{Proficient}
-     {Tensorflow, SQL, Docker, R}
+\item{}
+     {Python (esp. matplotlib, scikit-image, scikit-learn, keras), Ubuntu, bash,  Matlab, SQL, Power BI, HTML, Django, MS Office}
 
 \end{factlist}
 
 
+\section{Honors, Awards \& Talks}
+
+\begin{factlist}
+    
+    \item{$\bullet$}
+         {\textbf{Biomedical Image Analysis in Python}: Professionally-produced DataCamp.com online course. \href{https://www.datacamp.com/courses/biomedical-image-analysis-in-python}{\color{blue}\Mundus}} 
+         
+    \item{$\bullet$}
+         {Accepted into the Insight Data Science Fellowship program.}
+    
+    \item{$\bullet$}
+         {Awarded an National Institutes of Health research fellowship. \href{https://projectreporter.nih.gov/project_info_description.cfm?aid=9328269&icde=35806628}{\color{blue}\Mundus}}
+         
+    \item{$\bullet$}
+        {\textbf{Deconvoluting Convolutions}: Recap of Kaggle's 2018 Data Science Bowl and tutorial on using deep convolutional networks for object detection.   \href{https://github.com/stkbailey/deconv-conv/blob/master/slides.pdf}{\textcolor{blue}\Mundus}}
+     
+    \item{$\bullet$}
+        {\textbf{Principles of Network Analysis in Python}: Tutorial at PyTN on applying graph analysis to scraped data from Meetup.com. \href{https://github.com/stkbailey/nashnetx/blob/master/slides/PopularPythonistas_v3_PyTN.pdf}{\textcolor{blue}\Mundus}}
+        
+    \item{$\bullet$}
+        {Research contributed to lab's latest NIH grant application, which scored in the 99th percentile and was awarded at \$2.5 million.}
+         
+    \item{$\bullet$}
+         {Authored 8 papers, presented 9 posters and was invited to give a talk at a major international conference. \href{https://scholar.google.com/citations?user=s3nPF1MAAAAJ&hl=en}{\color{blue}\Mundus}}
+
+
+\end{factlist}
 
 \end{document}
 
